# Cloud-service

./: .clang-format  .travis.yml  CMakeLists.txt  Dockerfile  File.hpp  README.md  abstractClasses.hpp  classes.hpp
include/: AbstractClasses.hpp  AbstractClient.hpp  Alexey_backend.hpp  ClientHTTPS.hpp  Commands.hpp  Connection.hpp  ConsoleClient.hpp  CreateAccountPermission.hpp  DeleteFilesPermission.hpp  DownloadPermission.hpp  LoginPermission.hpp  MergePermission.hpp  NetworkUtils.hpp  Permission.hpp  Server.hpp  UploadPermission.hpp  abstractClasses.hpp  architecture.hpp  back.hpp  classes.hpp  client_side.hpp  receiver.hpp  virtual_back.h  virtual_back.hpp
scripts/: coverage.sh  duplication.sh
sources/: Authentication.cpp  ClientHTTPS.cpp  Commands.cpp  Connection.cpp  ConsoleClient.cpp  CreateAccountPermission.cpp  DownloadPermission.cpp  HttpsServer.cpp  IsExistUser.cpp  LoginPermission.cpp  README.md  Server.cpp  auth.cpp  controller.cpp  download.cpp  isExistUser.cpp  main.cpp  merge.cpp  registration.cpp  upload.cpp
tests/: test.cpp
